<resources>

    <string name="app_name">Restoranko</string>

    <!-- activity_main.xml -->
    <string name="sign_in">Prijava</string>
    <string name="registration">Registracija</string>
    <string name="con">Continue without sign in</string>
    <string name="text">The best way to order food</string>
    <string name="logo">Logo</string>

    <!-- activity_registration.xml -->
    <string name="regIme">Ime</string>
    <string name="regPrezime">Prezime</string>
    <string name="regKorime">Korisničko ime</string>
    <string name="regEmail">E-Mail</string>
    <string name="regLozinka">Lozinka</string>
    <string name="regPotvrda">Ponovite lozinku</string>
    <string name="regRegistracija">Registriraj se</string>

    <!-- activity_log_in.xml -->
    <string name="prijavaLogo">Logo</string>
    <string name="prijavaEmail">E-Mail</string>
    <string name="prijavaLozinka">Lozinka</string>
    <string name="spremiPrijavu">Ostanite prijavljeni na ovom uređaju</string>
    <string name="prijava">Prijavi se</string>

    <!-- activity_navigation.xml -->
    <string name="otvoriNavigacija">Otvori navigaciju</string>
    <string name="zatvoriNavigacija">Zatvori navigaciju</string>
    <string name="restoranSlika">Slika trgovine</string>
    <string name="pretragaRestorana">Pretraži restorane</string>

    <!-- activity_restaurant_details.xml -->
    <string name="restoranAdresa">Adresa:</string>
    <string name="restoranKontakt">Kontakt:</string>
    <string name="restoranWebAdresa">Web adresa:</string>

    <!-- activity_menu.xml -->
    <string name="odaberiteJelovnik">Odaberite svoj jelovnik</string>
    <string name="natrag">Natrag</string>
    <string name="potvrdi">Potvrdi</string>

    <!-- jelovnik.xml -->
    <string name="cijena">Cijena:</string>
    <string name="odaberiJelovnik">ODABERI</string>
    <string name="ukloniOdabir">UKLONI</string>

    <!-- fragment_potvrda_jelovnika.xml -->
    <string name="ukupnaCijena">Ukupna cijena:</string>

    <!-- activity_rezervacija.xml -->
    <string name="rezervacijaDolazak">Dolazak:</string>
    <string name="rezervacijaOdlazak">Odlazak:</string>
    <string name="rezervacijaOdabirMenu">Odaberite svoj jelovnik</string>
    <string name="rezervacijaUrediMenu">Uredite svoj jelovnik</string>
    <string name="rezervacijaOdabirStol">Odaberite svoj stol</string>
    <string name="rezervacijaPotvrda">Potvrdite rezervaciju</string>
    <string name="postaviVrijeme"><u>Postavi vrijeme</u></string>

    <!-- rezervacija.xml -->
    <string name="potvrdiRezervaciju">Potvrdi dolazak</string>
    <string name="recenzija">Recenzija</string>

    <!-- activity_recenzija.xml -->
    <string name="poruka">Nadamo se da ste uživali u našem restoranu!</string>
    <string name="ljestvica">fenomenalno</string>
    <string name="posalji">Pošalji povratnu informaciju</string>

    <!-- activity_splash_screen.xml -->
    <string name="pocetna_poruka">The best way to order food.</string>
    <string name="naziv_restorana">Restoranko</string>

</resources>
