<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".controller.Recenzija"
    android:background="#1f2530">

    <TextView
        android:id="@+id/txtPoruka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/poruka"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1" />

    <TextView
        android:id="@+id/txtLjestvica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/ljestvica"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPovratnaInformacija"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="top"
        android:hint="Recite nam što Vam se svidjelo."
        android:inputType="textMultiLine"
        android:lines="5"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/btnPosalji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/pozadina_gumb"
        android:clickable="true"
        android:padding="16dp"
        android:text="@string/posalji"
        android:textColor="#FFFFFF"
        android:textSize="15dp" />

</LinearLayout>